--- a/rufangrongke/rufangrongke/Classes/wo/View/WXZWorkingTimeView.xib
+++ b/rufangrongke/rufangrongke/Classes/wo/View/WXZWorkingTimeView.xib
@@ -12,127 +12,89 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="67t-b2-uQC">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="67t-b2-uQC">
                     <rect key="frame" x="137" y="72" width="327" height="328"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="wo_viewbg" translatesAutoresizingMaskIntoConstraints="NO" id="rjv-kD-CiM">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wo_viewbg" translatesAutoresizingMaskIntoConstraints="NO" id="rjv-kD-CiM">
                             <rect key="frame" x="0.0" y="0.0" width="327" height="328"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="327" id="WYe-X8-VsP"/>
-                                <constraint firstAttribute="height" constant="328" id="bkr-gl-pZr"/>
-                                <constraint firstAttribute="width" secondItem="rjv-kD-CiM" secondAttribute="height" multiplier="327:328" id="uHm-lf-axb"/>
-                            </constraints>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="WYe-X8-VsP"/>
-                                    <exclude reference="bkr-gl-pZr"/>
-                                </mask>
-                            </variation>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="入行时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sp-NA-UKz">
-                            <rect key="frame" x="131" y="17" width="64" height="20"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="入行时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sp-NA-UKz">
+                            <rect key="frame" x="132" y="17" width="64" height="20"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="16"/>
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="年" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="paf-J8-Pn4">
-                            <rect key="frame" x="131" y="152" width="18" height="22"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="年" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="paf-J8-Pn4">
+                            <rect key="frame" x="132" y="152" width="18" height="22"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <color key="textColor" red="0.10980392156862745" green="0.66274509803921566" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="月" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AU-IG-nKX">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3AU-IG-nKX">
                             <rect key="frame" x="246" y="152" width="18" height="22"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <color key="textColor" red="0.10980392156862745" green="0.66274509803921566" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" tag="100016" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cm-Bv-FX8">
-                            <rect key="frame" x="3" y="287" width="155" height="38"/>
+                        <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ntj-pO-ybW" customClass="SRMonthPicker">
+                            <rect key="frame" x="0.0" y="82" width="327" height="162"/>
+                        </pickerView>
+                        <button opaque="NO" tag="100016" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Cm-Bv-FX8">
+                            <rect key="frame" x="3" y="287" width="158" height="38"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="38" id="KdI-D9-HVz"/>
-                                <constraint firstAttribute="width" constant="155" id="p0J-FS-7WE"/>
+                                <constraint firstAttribute="height" constant="38" id="3Ym-Pv-Z2l"/>
                             </constraints>
                             <state key="normal" title="取消" backgroundImage="wo_cancel">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <button opaque="NO" tag="100017" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdI-H3-Xkg">
-                            <rect key="frame" x="169" y="287" width="155" height="38"/>
+                        <button opaque="NO" tag="100017" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdI-H3-Xkg">
+                            <rect key="frame" x="166" y="287" width="158" height="38"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="38" id="d1D-bv-auw"/>
-                                <constraint firstAttribute="width" constant="155" id="hpF-6E-LjS"/>
+                                <constraint firstAttribute="height" constant="38" id="VsA-dT-Hmh"/>
                             </constraints>
                             <state key="normal" title="确定" backgroundImage="wo_cancel">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
-                        <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ntj-pO-ybW" customClass="SRMonthPicker">
-                            <rect key="frame" x="0.0" y="82" width="327" height="162"/>
-                        </pickerView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="centerY" secondItem="paf-J8-Pn4" secondAttribute="centerY" constant="1" id="4eq-eu-7er"/>
-                        <constraint firstItem="SdI-H3-Xkg" firstAttribute="width" secondItem="4Cm-Bv-FX8" secondAttribute="width" id="4rl-ey-IhY"/>
                         <constraint firstAttribute="trailing" secondItem="3AU-IG-nKX" secondAttribute="trailing" constant="63" id="6NY-mk-N9T"/>
-                        <constraint firstAttribute="bottom" secondItem="4Cm-Bv-FX8" secondAttribute="bottom" constant="3" id="ADt-l3-j4Y"/>
                         <constraint firstAttribute="trailing" secondItem="rjv-kD-CiM" secondAttribute="trailing" id="ATS-MZ-iyf"/>
-                        <constraint firstAttribute="bottom" secondItem="SdI-H3-Xkg" secondAttribute="bottom" constant="3" id="Ccp-gS-cLM"/>
-                        <constraint firstAttribute="height" constant="328" id="CvO-ty-THn"/>
-                        <constraint firstAttribute="trailing" secondItem="SdI-H3-Xkg" secondAttribute="trailing" constant="3" id="EPI-9X-FQ8"/>
                         <constraint firstItem="6sp-NA-UKz" firstAttribute="top" secondItem="67t-b2-uQC" secondAttribute="top" constant="17" id="Fre-aJ-y7G"/>
-                        <constraint firstItem="4Cm-Bv-FX8" firstAttribute="leading" secondItem="67t-b2-uQC" secondAttribute="leading" constant="3" id="P2Z-pe-8pQ"/>
-                        <constraint firstAttribute="height" constant="328" id="P95-DN-rC0"/>
+                        <constraint firstAttribute="bottom" secondItem="4Cm-Bv-FX8" secondAttribute="bottom" constant="3" id="Mbn-by-jyw"/>
+                        <constraint firstAttribute="bottom" secondItem="SdI-H3-Xkg" secondAttribute="bottom" constant="3" id="NUt-Uk-cah"/>
+                        <constraint firstItem="SdI-H3-Xkg" firstAttribute="width" secondItem="4Cm-Bv-FX8" secondAttribute="width" id="Oqq-EG-j5L"/>
                         <constraint firstAttribute="centerY" secondItem="Ntj-pO-ybW" secondAttribute="centerY" constant="1" id="QGw-mn-dIx"/>
                         <constraint firstAttribute="centerX" secondItem="6sp-NA-UKz" secondAttribute="centerX" id="RpK-Hm-d84"/>
-                        <constraint firstAttribute="width" constant="327" id="SpG-CD-SZs"/>
                         <constraint firstItem="rjv-kD-CiM" firstAttribute="leading" secondItem="67t-b2-uQC" secondAttribute="leading" id="W1X-eD-Wfb"/>
                         <constraint firstAttribute="trailing" secondItem="Ntj-pO-ybW" secondAttribute="trailing" id="Xhc-zv-zMM"/>
-                        <constraint firstItem="SdI-H3-Xkg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4Cm-Bv-FX8" secondAttribute="trailing" constant="5" id="ayr-OQ-fYU"/>
-                        <constraint firstAttribute="width" constant="327" id="fhd-VO-ARU"/>
+                        <constraint firstItem="SdI-H3-Xkg" firstAttribute="leading" secondItem="4Cm-Bv-FX8" secondAttribute="trailing" constant="5" id="dVH-jy-S5d"/>
                         <constraint firstItem="paf-J8-Pn4" firstAttribute="leading" secondItem="6sp-NA-UKz" secondAttribute="leading" id="i2t-uo-ChW"/>
+                        <constraint firstAttribute="trailing" secondItem="SdI-H3-Xkg" secondAttribute="trailing" constant="3" id="jKW-Qp-Lg5"/>
                         <constraint firstItem="rjv-kD-CiM" firstAttribute="top" secondItem="67t-b2-uQC" secondAttribute="top" id="mV7-hT-d9p"/>
                         <constraint firstAttribute="centerY" secondItem="3AU-IG-nKX" secondAttribute="centerY" constant="1" id="mbg-Xz-hn3"/>
+                        <constraint firstItem="4Cm-Bv-FX8" firstAttribute="leading" secondItem="67t-b2-uQC" secondAttribute="leading" constant="3" id="qks-YH-pXT"/>
                         <constraint firstAttribute="bottom" secondItem="rjv-kD-CiM" secondAttribute="bottom" id="r1L-R2-JNG"/>
                         <constraint firstItem="Ntj-pO-ybW" firstAttribute="leading" secondItem="67t-b2-uQC" secondAttribute="leading" id="uXI-Jp-HcJ"/>
+                        <constraint firstAttribute="width" secondItem="67t-b2-uQC" secondAttribute="height" multiplier="327:328" id="upu-VO-Uf6"/>
                     </constraints>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="CvO-ty-THn"/>
-                            <exclude reference="P95-DN-rC0"/>
-                            <exclude reference="SpG-CD-SZs"/>
-                            <exclude reference="fhd-VO-ARU"/>
-                        </mask>
-                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.058823529411764705" green="0.058823529411764705" blue="0.058823529411764705" alpha="0.5" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="67t-b2-uQC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="137" id="2mK-Z0-afP"/>
                 <constraint firstItem="67t-b2-uQC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="BBd-DV-UBv"/>
-                <constraint firstItem="67t-b2-uQC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="136" id="BCn-ic-Ig5"/>
-                <constraint firstAttribute="bottom" secondItem="67t-b2-uQC" secondAttribute="bottom" constant="136" id="N7s-A3-ZGI"/>
                 <constraint firstAttribute="centerY" secondItem="67t-b2-uQC" secondAttribute="centerY" constant="64" id="POC-wW-CUk"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="67t-b2-uQC" secondAttribute="trailing" constant="12" id="Pfx-sc-W44"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="67t-b2-uQC" secondAttribute="bottom" constant="50" id="kMZ-tR-QOs"/>
                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="67t-b2-uQC" secondAttribute="bottom" constant="12" id="lUr-ME-Zyr"/>
                 <constraint firstItem="67t-b2-uQC" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="12" id="mex-ub-0cm"/>
-                <constraint firstAttribute="trailing" secondItem="67t-b2-uQC" secondAttribute="trailing" constant="136" id="pYh-Ff-VMh"/>
                 <constraint firstAttribute="centerX" secondItem="67t-b2-uQC" secondAttribute="centerX" id="xIm-qa-YUP"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="2mK-Z0-afP"/>
-                    <exclude reference="BCn-ic-Ig5"/>
-                    <exclude reference="N7s-A3-ZGI"/>
-                    <exclude reference="kMZ-tR-QOs"/>
-                    <exclude reference="pYh-Ff-VMh"/>
-                </mask>
-            </variation>
             <connections>
                 <outlet property="bgImgView" destination="rjv-kD-CiM" id="VcC-Mv-jo8"/>
                 <outlet property="bgView" destination="67t-b2-uQC" id="z4z-mV-vR5"/>
