1119 王晓植:完事了

--- a/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
+++ b/rufangrongke/rufangrongke/Classes/main/Controller/WXZFindPasswordController.xib
@@ -38,7 +38,7 @@
                                 <constraint firstAttribute="height" constant="1" id="doZ-An-YnR"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入11位手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="e91-cy-sXd" userLabel="手机号码">
                             <rect key="frame" x="98" y="2.5" width="487" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="KdB-Nr-mFS"/>
@@ -90,7 +90,7 @@
                                 <constraint firstAttribute="height" constant="1" id="GhV-QN-u84"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9OA-r7-ajU" userLabel="验证码">
                             <rect key="frame" x="98" y="2" width="487" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="aX6-Oj-mvP"/>
@@ -144,7 +144,7 @@
                                 <constraint firstAttribute="height" constant="1" id="Nrk-Mr-Y8O"/>
                             </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="fci-Fr-N45" userLabel="重置密码">
                             <rect key="frame" x="98" y="2" width="463" height="39"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="39" id="dCa-22-2P0"/>
